tests/baselines/reference/functionOverloads8(strict=true).errors.txt
functionOverloads8.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
functionOverloads8.ts(2,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== functionOverloads8.ts (2 errors) ====
    function foo();
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(foo:string);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(foo?:any){ return '' }
    